--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Jay Patel",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.34.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.2",
     "nodemailer": "^6.8.0"
   }
 }
