added mongodb atlas url

--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
-DATABASE="mongodb+srv://jaypatel66132:jaypatel1122@cluster0.jghgjbp.mongodb.net/mern-LoginSignUP?retryWrites=true&w=majority"
+DATABASE="mongodb://0.0.0.0:27017/myporfolio"
 
-MONGO_URI="mongodb://0.0.0.0:27017/myporfolio"
+MONGO_URI="mongodb+srv://jaypatel66132:jaypatel1122@cluster0.3omrszy.mongodb.net/myporfolio?retryWrites=true"
 
 SECRET_KEY="MYNAMEISJAYPATELMYBFFAREHARDIKRIMA"
 
